<resources>
    <string name="app_name">AzFilm</string>

    <string name="app_name_welcome">AZ<font color="#E41212">Film</font></string>

    <string name="app_slogan">
        Discover Azerbaijani movies from one place
    </string>

    <string name="link_to_custom_login">
        Log in
    </string>

    <string name="link_to_google_login">
        Log in with Google
    </string>

    <string name="home_intro">
        You can browse and search for movies.
    </string>

    <string name="base_url">
        https://api.themoviedb.org/3
    </string>

    <string name="movie_overview">
        The film is about the stepmother who tried to be a real mother of a boy. But she could be a real mother only after some difficult events for her and child."
    </string>

    <string name="movie_title">
        Stepmother
    </string>

    <string name="movie_genres">
        Drama, Romance, Family
    </string>

    <string name="release_date">
        1958
    </string>

    <string name="runtime">
        1 hour 22 minute
    </string>
    <string name="check_your_email">We have sent a verification email on your entered email adress, please check and verify. After verifying you can log in</string>
    <string name="check_your_email_heading">Check your email</string>
    <string name="check_your_email_action_text">Go to email</string>


</resources>