<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgMovie"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/img_stepmother" />

    <ImageButton
        android:id="@+id/btnNavigateToHome"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"

        android:background="@drawable/shape_circle"
        android:scaleType="centerInside"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />


    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/font_28_600"
        app:layout_constraintEnd_toStartOf="@+id/btnAddOrRemoveToFavorites"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/imgMovie"
        tools:text="@string/movie_title" />

    <TextView
        android:id="@+id/tvMovieGenres"
        style="@style/TextGenreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvMovieName"
        tools:text="@string/movie_genres" />

    <ImageButton
        android:id="@+id/btnAddOrRemoveToFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/tvMovieGenres"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/imgMovie" />


    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ellipsize="end"
        android:maxLines="8"
        android:minLines="8"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvMovieGenres"
        tools:text="@string/movie_overview" />

    <TextView
        android:id="@+id/tvReleaseDate"
        style="@style/Tv_Movies"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/tvDuration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvOverview"
        tools:text="@string/release_date" />

    <TextView
        android:id="@+id/tvRating"
        style="@style/Tv_Movies"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="8.5"
        app:drawableStartCompat="@drawable/icon_star_rating"
        app:drawableTint="@color/star_color"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDuration"
        app:layout_constraintTop_toTopOf="@id/tvReleaseDate" />

    <TextView
        android:id="@+id/tvDuration"
        style="@style/Tv_Movies"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/icon_schedule"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvRating"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvReleaseDate"
        app:layout_constraintTop_toTopOf="@id/tvReleaseDate"
        tools:text="@string/runtime" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>